--- a/tutorials/Tutorial_pygpc_pyrates.ipynb
+++ b/tutorials/Tutorial_pygpc_pyrates.ipynb
@@ -762,7 +762,8 @@
     "On the other hand, the global derivative-based sensitivity coefficients $S_i^{(\\partial)}$ are measures of the average change of the quantity of interest with respect to the i-th random variable. They are determined by means of the gPC-coefficients and the corresponding partial derivatives of the basis functions [Xiu (2009)]:\n",
     "\n",
     "$$\n",
-    "S_i^{(\\partial)} = E\\left[\\frac{\\partial \\mathbf{q}(\\xi)}{\\partial \\xi_i}\\right] = \\sum_(α∈A_i)▒u_α^   ∫_Θ▒〖(∂Ψ_α^  (ξ))/(∂ξ_i ) p(ξ)dξ\n",
+    "S_i^{(\\partial)} = E\\left[\\frac{\\partial \\mathbf{q}(\\xi)}{\\partial \\xi_i}\\right] = \n",
+    "\\sum_{\\alpha \\in \\mathcal{A}_i)}\\mathbf{u}_{\\mathbf{\\alpha}}\\int_{\\Theta}\\frac{\\partial \\Psi_{\\mathbf{\\alpha}}(\\xi)}{\\partial \\xi_i}p(\\xi)\\mathrm{d}\\xi\n",
     "$$\n",
     "\n",
     "![sensitiviy_coefficients.png](attachment:sensitiviy_coefficients.png)"
