- updated BaCI tutorial

--- a/tutorials/Tutorial_pygpc_pyrates_CNS.ipynb
+++ b/tutorials/Tutorial_pygpc_pyrates_CNS.ipynb
@@ -2607,7 +2607,7 @@
     "        T = 500.\n",
     "        dt = 1e-3\n",
     "        dts = 1e-2\n",
-    "        ext_input = np.random.uniform(3., 5., (int(T / dt), 1))\n",
+    "        ext_input = np.random.uniform(3., 5., (int(T / dt), 1)) # !\n",
     "\n",
     "        sys.stdout = io.StringIO()\n",
     "\n",
