- fixed bugs in unittest - fixed bugs in MERegAdaptiveProjection - work in progress while updating TestBench

--- a/tutorials/Tutorial_pygpc_pyrates_CNS.ipynb
+++ b/tutorials/Tutorial_pygpc_pyrates_CNS.ipynb
@@ -1568,6 +1568,7 @@
     "from numba import njit\n",
     "import sys\n",
     "import io\n",
+    "import os\n",
     "\n",
     "\n",
     "# auxiliary function to determine QOI\n",
@@ -1626,74 +1627,29 @@
     "    \"\"\"\n",
     "\n",
     "    def __init__(self):\n",
-    "        from pyrates.frontend import OperatorTemplate\n",
-    "        from pyrates.frontend import NodeTemplate, CircuitTemplate\n",
-    "\n",
-    "        exc_syn = ['d/dt * r = (delta/(PI*tau) + 2.*r*v) /tau',\n",
-    "                   'd/dt * v = (v^2 + eta + I_ext + (I_exc - I_inh)*tau - (PI*r*tau)^2) /tau',\n",
-    "                   'd/dt * I_exc = J*r + r_exc - I_exc/tau_exc',\n",
-    "                   'd/dt * I_inh =  r_inh - I_inh/tau_inh'\n",
-    "                   ]\n",
-    "        inh_syn = ['d/dt * r = (delta/(PI*tau) + 2.*r*v) /tau',\n",
-    "                   'd/dt * v = (v^2 + eta + I_ext + (I_exc - I_inh)*tau - (PI*r*tau)^2) /tau',\n",
-    "                   'd/dt * I_exc = r_exc - I_exc/tau_exc',\n",
-    "                   'd/dt * I_inh = J*r + r_inh - I_inh/tau_inh'\n",
-    "                   ]\n",
-    "        variables = {'delta': {'default': 1.0},\n",
-    "                     'tau': {'default': 1.0},\n",
-    "                     'eta': {'default': -2.5},\n",
-    "                     'J': {'default': 0.0},\n",
-    "                     'tau_exc': {'default': 1.0},\n",
-    "                     'tau_inh': {'default': 2.0},\n",
-    "                     'r': {'default': 'output'},\n",
-    "                     'v': {'default': 'variable'},\n",
-    "                     'I_exc': {'default': 'variable'},\n",
-    "                     'I_inh': {'default': 'variable'},\n",
-    "                     'I_ext': {'default': 'input'},\n",
-    "                     'r_exc': {'default': 'input'},\n",
-    "                     'r_inh': {'default': 'input'},\n",
-    "                     }\n",
-    "\n",
-    "        op_exc_syn = OperatorTemplate(name='Op_exc_syn', path=None, equations=exc_syn, variables=variables)\n",
-    "        op_inh_syn = OperatorTemplate(name='Op_inh_syn', path=None, equations=inh_syn, variables=variables)\n",
-    "\n",
-    "        pcs = NodeTemplate(name='PCs', path=None, operators=[op_exc_syn])\n",
-    "        eins = NodeTemplate(name='EINs', path=None, operators={op_exc_syn: {'eta': -0.5}})\n",
-    "        iins = NodeTemplate(name='IINs', path=None, operators={op_inh_syn: {'tau': 2.0, 'eta': -0.5}})\n",
-    "\n",
-    "        self.jrc_template = CircuitTemplate(name='jrc_template', path=None,\n",
-    "                                            nodes={'PCs': pcs, 'EINs': eins, 'IINs': iins},\n",
-    "                                            edges=[('PCs/Op_exc_syn/r', 'EINs/Op_exc_syn/r_exc',\n",
-    "                                                    None, {'weight': 13.5}),\n",
-    "                                                   ('EINs/Op_exc_syn/r', 'PCs/Op_exc_syn/r_exc',\n",
-    "                                                    None, {'weight': 0.8 * 13.5}),\n",
-    "                                                   ('PCs/Op_exc_syn/r', 'IINs/Op_inh_syn/r_exc',\n",
-    "                                                    None, {'weight': 0.25 * 13.5}),\n",
-    "                                                   ('IINs/Op_inh_syn/r', 'PCs/Op_exc_syn/r_inh',\n",
-    "                                                    None, {'weight': 1.75 * 13.5})]\n",
-    "                                            )\n",
+    "        pass\n",
     "\n",
     "    def validate(self):\n",
     "        pass\n",
     "\n",
     "    def simulate(self, process_id, matlab_engine=None):\n",
-    "        T = 500.\n",
+    "        T = 10.\n",
     "        dt = 1e-3\n",
     "        dts = 1e-2\n",
     "        ext_input = np.random.uniform(3., 5., (int(T / dt), 1))\n",
     "\n",
-    "        sys.stdout = io.StringIO()\n",
+    "        # sys.stdout = io.StringIO()\n",
     "\n",
     "        # run PyRates with parameter combinations\n",
-    "        results, result_map = grid_search(deepcopy(self.jrc_template),\n",
+    "        results, result_map = grid_search(circuit_template=f'{os.path.dirname(__file__)}/PyRates_model_template/JRC',\n",
     "                                          param_grid={'w_ep': self.p['w_ein_pc'], 'w_ip': self.p['w_iin_pc']},\n",
     "                                          param_map={'w_ep': {'vars': ['weight'],\n",
-    "                                                              'edges': [('EINs', 'PCs')]},\n",
+    "                                                              'edges': [('EIN', 'PC')]},\n",
     "                                                     'w_ip': {'vars': ['weight'],\n",
-    "                                                              'edges': [('IINs', 'PCs')]}},\n",
+    "                                                              'edges': [('IIN', 'PC')]}},\n",
     "                                          simulation_time=T, dt=dt, sampling_step_size=dts,\n",
-    "                                          inputs={'PCs/Op_exc_syn/I_ext': ext_input},\n",
-    "                                          outputs={'r': 'PCs/Op_exc_syn/r'},\n",
+    "                                          inputs={'PC/Op_exc_syn/I_ext': ext_input},\n",
+    "                                          outputs={'r': 'PC/Op_exc_syn/r'},\n",
     "                                          init_kwargs={'vectorization': True},\n",
     "                                          permute_grid=False,\n",
     "                                          backend=\"numpy\",  # \"tensorflow\"\n",
@@ -1704,22 +1660,7 @@
     "        # extract QOI\n",
     "        for idx, (we, wi) in enumerate(zip(self.p['w_ein_pc'], self.p['w_iin_pc'])):\n",
     "            res_idx = result_map.loc[(result_map == (we, wi)).all(1), :].index\n",
-    "            # plot_psd\n",
-    "            # plot_psd(results[we][wi], tmin=30.0, show=False)\n",
-    "            # p = plt.gca().get_lines()[-1].get_ydata()\n",
-    "            # f = plt.gca().get_lines()[-1].get_xdata()\n",
-    "            # max_idx = np.argmax(p)\n",
-    "            # y[idx, 0] = f[max_idx]\n",
-    "            # # y[idx, 1] = p[max_idx]\n",
-    "            # plt.close(plt.gcf())\n",
     "\n",
-    "            # welch\n",
-    "            # f, p = psd(data=results[we][wi], nperseg=4096, tmin=30.0)\n",
-    "            # max_idx = np.argmax(p)\n",
-    "            # y[idx, 0] = f[max_idx]\n",
-    "            # y[idx, 1] = p[max_idx]\n",
-    "\n",
-    "            # fft\n",
     "            # f, p = psd(data=results[res_idx], nperseg=4096, tmin=30.0)\n",
     "            f, p = get_psd(data=results[res_idx], tmin=30.0)\n",
     "            p = p[:int(len(p) / 2)]\n",
@@ -1729,7 +1670,8 @@
     "\n",
     "        sys.stdout = sys.__stdout__\n",
     "\n",
-    "        return y"
+    "        return y\n",
+    "\n"
    ]
   },
   {
@@ -1749,7 +1691,7 @@
     "import h5py\n",
     "import pygpc\n",
     "from collections import OrderedDict\n",
-    "from tutorials.PyRates_CNS_Model import PyRates_CNS_Model\n",
+    "from tutorials.PyRates_CNS_Model_old import PyRates_CNS_Model\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
@@ -1785,7 +1727,7 @@
     "options[\"classifier\"] = \"learning\"\n",
     "options[\"n_samples_discontinuity\"] = 10\n",
     "options[\"adaptive_sampling\"] = True\n",
-    "options[\"eps\"] = 0.02\n",
+    "options[\"eps\"] = 0.03\n",
     "options[\"n_grid_init\"] = 100\n",
     "options[\"GPU\"] = False\n",
     "options[\"fn_results\"] = fn_results\n",
@@ -1812,7 +1754,7 @@
     "                             algorithm=\"sampling\",\n",
     "                             n_samples=1e4)\n",
     "\n",
-    "with h5py.File(fn_results + \"_validation.hdf5\") as f:\n",
+    "with h5py.File(fn_results + \"_validation.hdf5\", \"r\") as f:\n",
     "    val_coords_norm = f[\"grid/coords_norm\"][:]\n",
     "    val_coords = f[\"grid/coords\"][:]\n",
     "    val_results = f[\"model_evaluations/original_all_qoi\"][:]\n",
@@ -1825,15 +1767,7 @@
     "                        data_original=val_results,\n",
     "                        output_idx=0,\n",
     "                        fn_out=session.fn_results + '_val',\n",
-    "                        n_cpu=session.n_cpu)\n",
-    "\n",
-    "\n",
-    "# Validate gPC vs original model function (Monte Carlo)\n",
-    "nrmsd = pygpc.validate_gpc_mc(session=session,\n",
-    "                              coeffs=coeffs,\n",
-    "                              n_samples=int(1e3),\n",
-    "                              output_idx=0,\n",
-    "                              fn_out=session.fn_results + '_mc')\n"
+    "                        n_cpu=session.n_cpu)"
    ]
   }
  ],
