- fixing bugs from unittest - added unittest for backends - added unittest to save Session objects in hdf5 format

--- a/tutorials/Tutorial_pygpc_pyrates_BaCI.ipynb
+++ b/tutorials/Tutorial_pygpc_pyrates_BaCI.ipynb
@@ -1207,7 +1207,7 @@
     "fn = os.path.join(os.path.split(pygpc.__path__[0])[0], \"tutorials\", \"datasets\", \"PyRates_CNS_GPC\")\n",
     "\n",
     "# load gpc object\n",
-    "gpc = pygpc.read_gpc_pkl(fn + \".pkl\")\n",
+    "gpc = pygpc.read_session_pkl(fn + \".pkl\")\n",
     "\n",
     "# load gpc coefficients\n",
     "coeffs = [None, None]\n",
