- extended "FD_2nd" for n dims - started tutorial on gradient estimation methods

--- a/tutorials/Tutorial_gradient.ipynb
+++ b/tutorials/Tutorial_gradient.ipynb
@@ -25,6 +25,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Gradient enhanced gPC\n",
+    "It is possible to accelerate the identification of the gPC coefficients by using the derivative information of the transfer function. The gPC matrix consists of continuously differentiable polynomials and can be extended by its partial derivatives at each sampling point. This extends the resulting system of equations to:\n",
+    "\n",
+    "$$\n",
+    "\\left[ \\begin{array}{c}\n",
+    "\\mathbf{\\Psi}\\\\                                              \n",
+    "\\mathbf{\\Psi}_\\partial                                             \n",
+    "\\end{array}\\right]\n",
+    "[\\mathbf{U}] =\n",
+    "\\left[ \\begin{array}{c}\n",
+    "\\mathbf{Y}\\\\                                              \n",
+    "\\mathbf{Y}_\\partial                                             \n",
+    "\\end{array}\\right],\n",
+    "$$\n",
+    "\n",
+    "where the gradient gPC matrix $[\\mathbf{\\Psi}_\\partial]$ is of size $[d N_g \\times N_c]$ and contains the partial derivatives of the basis functions at each sampling point:\n",
+    "\n",
+    "$$\n",
+    "[\\mathbf{\\Psi}_\\partial] = \n",
+    "\\left[ \\begin{array}{c}\n",
+    "\\left.\\frac{\\partial\\psi}{\\partial\\xi_1}\\right|_{\\xi_1}\\\\                                              \n",
+    "\\vdots\\\\\n",
+    "\\left.\\frac{\\partial\\psi}{\\partial\\xi_d}\\right|_{\\xi_1}\\\\\n",
+    "\\vdots\\\\\n",
+    "\\vdots\\\\\n",
+    "\\vdots\\\\\n",
+    "\\left.\\frac{\\partial\\psi}{\\partial\\xi_1}\\right|_{\\xi_{N_g}}\\\\                                              \n",
+    "\\vdots\\\\\n",
+    "\\left.\\frac{\\partial\\psi}{\\partial\\xi_d}\\right|_{\\xi_{N_g}}\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "The solution on the right hand side is extended accordingly:\n",
+    "\n",
+    "$$\n",
+    "[\\mathbf{Y}_\\partial] = \n",
+    "\\left[ \\begin{array}{ccc}\n",
+    "\\left.\\frac{\\partial y_1}{\\partial\\xi_1}\\right|_{\\xi_1} & \\ldots & \\left.\\frac{\\partial y_{N_q}}{\\partial\\xi_1}\\right|_{\\xi_1}\\\\                                              \n",
+    "\\vdots & \\vdots & \\vdots\\\\\n",
+    "\\left.\\frac{\\partial y_1}{\\partial\\xi_d}\\right|_{\\xi_1} & \\ldots & \\left.\\frac{\\partial y_{N_q}}{\\partial\\xi_d}\\right|_{\\xi_1}\\\\\n",
+    "\\vdots & \\ldots & \\vdots\\\\\n",
+    "\\vdots & \\ddots & \\vdots\\\\\n",
+    "\\vdots & \\ldots & \\vdots\\\\\n",
+    "\\left.\\frac{\\partial y_1}{\\partial\\xi_1}\\right|_{\\xi_{N_g}} & \\ldots & \\left.\\frac{\\partial y_{N_q}}{\\partial\\xi_1}\\right|_{\\xi_{N_g}}\\\\                                              \n",
+    "\\vdots & \\vdots & \\vdots\\\\\n",
+    "\\left.\\frac{\\partial y_1}{\\partial\\xi_d}\\right|_{\\xi_{N_g}} & \\ldots & \\left.\\frac{\\partial y_{N_q}}{\\partial\\xi_d}\\right|_{\\xi_{N_g}}\n",
+    "\\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    "The complete system now reads:\n",
+    "\n",
+    "$$\n",
+    "[\\mathbf{\\Psi}'][\\mathbf{U}] = [\\mathbf{Y}']\n",
+    "$$\n",
+    "\n",
+    "This gradient based formulation consists of $(d+1) N_g$ equations that match both function values and gradients, in comparison to traditional approaches which consists of only $N_g$ equations that match function values. Despite the extra computational cost required to obtain the gradients, the use of gradients improves the gPC. There exist several methods to determine the gradients. In the following, the implemented methods in pygpc are presented and compared. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finite difference approach using forward approximation\n",
+    "\"FD_fwd\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finite difference regression approach of 1st order accuracy\n",
+    "\"FD_1st\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finite difference regression approach of 2nd order accuracy\n",
+    "\"FD_2nd\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Tutorial: Gradient\n",
     "\n",
     "This tutorial shows you how to perform an uncertainty and sensitivity analysis using pygpc. The following topics will be discussed:\n",
@@ -67,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
