--- a/dev/Tutorial_gradient.ipynb
+++ b/dev/Tutorial_gradient.ipynb
@@ -80,7 +80,18 @@
     "[\\mathbf{\\Psi}'][\\mathbf{U}] = [\\mathbf{Y}']\n",
     "$$\n",
     "\n",
-    "This gradient based formulation consists of $(d+1) N_g$ equations that match both function values and gradients, in comparison to traditional approaches which consists of only $N_g$ equations that match function values. Despite the extra computational cost required to obtain the gradients, the use of gradients improves the gPC. There exist several methods to determine the gradients. In the following, the implemented methods in pygpc are presented and compared. \n"
+    "This gradient based formulation consists of $(d+1) N_g$ equations that match both function values and gradients, in comparison to traditional approaches which consists of only $N_g$ equations that match function values. Despite the extra computational cost required to obtain the gradients, the use of gradients improves the gPC. However, there exist several methods to determine the gradients. In the following, the implemented methods in pygpc are presented and compared. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient estimation of sparse irregular datasets\n",
+    "Surface interpolation finds application in many aspects of science and technology.\n",
+    "A typical application in geological science and environmental engineering is to contour surfaces from hydraulic head measurements from irregular spaced data.\n",
+    "\n",
+    "Computing gradients efficiently and accurately from sparse irregular high-dimensional datasets is challenging. The additional calculation effort should be kept as low as possible, especially in the case of computationally expensive models"
    ]
   },
   {
@@ -174,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
