--- a/tutorials/Tutorial_pygpc.ipynb
+++ b/tutorials/Tutorial_pygpc.ipynb
@@ -1635,13 +1635,7 @@
       "Determine gPC coefficients using 'LarsLasso' solver (gradient enhanced)...\n",
       "-> relative nrmsd error = 0.023320854811457594\n",
       "Extending grid from 35 to 38 by 3 sampling points\n",
-      "Performing simulations 36 to 38\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Performing simulations 36 to 38\n",
       "It/Sub-it: 10/2 Performing simulation 1 from 3 [=============                           ] 33.3%\n",
       "Total parallel function evaluation: 0.005158662796020508 sec\n",
       "It/Sub-it: 10/2 Performing simulation 1 from 6 [======                                  ] 16.7%\n",
@@ -3135,7 +3129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
