--- a/tutorials/Tutorial_pygpc.ipynb
+++ b/tutorials/Tutorial_pygpc.ipynb
@@ -193,7 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $\\beta$ distributed random variables:\n"
+    "#### Beta distributed random variables:\n",
+    "Probability density function:\n",
+    "\n",
+    "$$\n",
+    "p(x) = \\left(\\frac{\\Gamma(p)\\Gamma(q)}{\\Gamma(p+q)}(b-a)^{(p+q-1)}\\right)^{-1} (x-a)^{(p-1)} (b-x)^{(q-1)}\n",
+    "$$\n",
+    "\n",
+    "The shape parameters of beta distributed random variable are defined with the parameter pdf_shape$=[p, q]$ and the limits with pdf_limits$=[a, b]$."
    ]
   },
   {
@@ -243,7 +250,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### *Normal* distributed random variables:"
+    "#### *Normal* distributed random variables:\n",
+    "Probability density function:\n",
+    "\n",
+    "$$\n",
+    "p(x) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}}\\exp{-\\frac{(x-\\mu)^2}{2\\sigma^2}}\n",
+    "$$\n",
+    "\n",
+    "The mean and the standard deviation are defined with the parameter pdf_shape$=[\\mu, \\sigma]$."
    ]
   },
   {
@@ -259,12 +273,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### *Gamma* distributed random variables:"
+    "#### *Gamma* distributed random variables:\n",
+    "Probability density function:\n",
+    "\n",
+    "$$\n",
+    "     p(x) = \\frac{\\beta^{\\alpha}}{\\Gamma(\\alpha)}x^{\\alpha-1}e^{\\beta x}\n",
+    "$$\n",
+    "\n",
+    "The shape, rate and the location of the gamma distributed random variable is defined with\n",
+    "the parameter pdf_shape$=[\\alpha, \\beta, loc]$"
    ]
   },
   {
