--- a/tutorials/Tutorial_backends.ipynb
+++ b/tutorials/Tutorial_backends.ipynb
@@ -86,7 +86,7 @@
     "n_basis = pygpc.get_num_coeffs_sparse([n_basis_order] * n_dim, n_basis_order, n_dim, n_dim, n_dim, 1)\n",
     "\n",
     "# create coefficient matrix\n",
-    "coeffs = np.ones((len(gpc.basis.b), n_coeffs))"
+    "coeffs = np.ones((len(gpc.basis.b), n_qoi))"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
