--- a/doc/source/auto_algorithms/plot_algorithm_static_reg.ipynb
+++ b/doc/source/auto_algorithms/plot_algorithm_static_reg.ipynb
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "import pygpc\nfrom collections import OrderedDict\n\nfn_results = 'tmp/static_reg'   # filename of output\nsave_session_format = \".hdf5\"   # file format of saved gpc session \".hdf5\" (slow) or \".pkl\" (fast)"
+        "# Windows users have to encapsulate the code into a main function to avoid multiprocessing errors.\n# def main():\nimport pygpc\nfrom collections import OrderedDict\n\nfn_results = 'tmp/static_reg'   # filename of output\nsave_session_format = \".pkl\"    # file format of saved gpc session \".hdf5\" (slow) or \".pkl\" (fast)"
       ]
     },
     {
@@ -62,7 +62,7 @@
       },
       "outputs": [],
       "source": [
-        "# gPC options\noptions = dict()\noptions[\"method\"] = \"reg\"\noptions[\"solver\"] = \"Moore-Penrose\"\noptions[\"settings\"] = None\noptions[\"order\"] = [9, 9]\noptions[\"order_max\"] = 9\noptions[\"interaction_order\"] = 2\noptions[\"matrix_ratio\"] = 20\noptions[\"error_type\"] = \"nrmsd\"\noptions[\"n_samples_validation\"] = 1e3\noptions[\"n_cpu\"] = 0\noptions[\"fn_results\"] = fn_results\noptions[\"save_session_format\"] = save_session_format\noptions[\"gradient_enhanced\"] = True\noptions[\"gradient_calculation\"] = \"FD_1st2nd\"\noptions[\"gradient_calculation_options\"] = {\"dx\": 0.05, \"distance_weight\": -2}\noptions[\"backend\"] = \"omp\"\noptions[\"grid\"] = pygpc.Random\noptions[\"grid_options\"] = None\n\n# determine number of basis functions\nn_coeffs = pygpc.get_num_coeffs_sparse(order_dim_max=options[\"order\"],\n                                       order_glob_max=options[\"order_max\"],\n                                       order_inter_max=options[\"interaction_order\"],\n                                       dim=problem.dim)\n# generate grid\ngrid = pygpc.Random(parameters_random=problem.parameters_random,\n                    n_grid=options[\"matrix_ratio\"] * n_coeffs,\n                    seed=1)\n\n# initialize algorithm\nalgorithm = pygpc.Static(problem=problem, options=options, grid=grid)"
+        "# gPC options\noptions = dict()\noptions[\"method\"] = \"reg\"\noptions[\"solver\"] = \"Moore-Penrose\"\noptions[\"settings\"] = None\noptions[\"order\"] = [9, 9]\noptions[\"order_max\"] = 9\noptions[\"interaction_order\"] = 2\noptions[\"matrix_ratio\"] = 20\noptions[\"error_type\"] = \"nrmsd\"\noptions[\"n_samples_validation\"] = 1e3\noptions[\"n_cpu\"] = 0\noptions[\"fn_results\"] = fn_results\noptions[\"save_session_format\"] = save_session_format\noptions[\"gradient_enhanced\"] = True\noptions[\"gradient_calculation\"] = \"FD_1st2nd\"\noptions[\"gradient_calculation_options\"] = {\"dx\": 0.05, \"distance_weight\": -2}\noptions[\"backend\"] = \"omp\"\noptions[\"grid\"] = pygpc.Random\noptions[\"grid_options\"] = {\"seed\": 1}\noptions[\"n_grid\"] = 1000\n\n# initialize algorithm\nalgorithm = pygpc.Static(problem=problem, options=options)"
       ]
     },
     {
@@ -134,7 +134,7 @@
       },
       "outputs": [],
       "source": [
-        "nrmsd = pygpc.validate_gpc_mc(session=session,\n                              coeffs=coeffs,\n                              n_samples=int(1e4),\n                              output_idx=[0],\n                              fn_out=None,\n                              folder=None,\n                              plot=True,\n                              n_cpu=session.n_cpu)\n\nprint(\"> Maximum NRMSD (gpc vs original): {:.2}%\".format(max(nrmsd)))"
+        "nrmsd = pygpc.validate_gpc_mc(session=session,\n                              coeffs=coeffs,\n                              n_samples=int(1e4),\n                              output_idx=[0],\n                              fn_out=None,\n                              folder=None,\n                              plot=True,\n                              n_cpu=session.n_cpu)\n\nprint(\"> Maximum NRMSD (gpc vs original): {:.2}%\".format(max(nrmsd)))\n\n# On Windows subprocesses will import (i.e. execute) the main module at start.\n# You need to insert an if __name__ == '__main__': guard in the main module to avoid\n# creating subprocesses recursively.\n#\n# if __name__ == '__main__':\n#     main()"
       ]
     }
   ],
@@ -154,7 +154,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.7.6"
     }
   },
   "nbformat": 4,
