[ADD] updated documentation

--- a/doc/source/auto_gpc/plot_basis.ipynb
+++ b/doc/source/auto_gpc/plot_basis.ipynb
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "import pygpc\nimport time\nimport numpy as np\nimport matplotlib.pyplot as plt\nfrom IPython import display\nfrom collections import OrderedDict\n\n# define model\nmodel = pygpc.testfunctions.Ishigami()\n\n# define parameters\nparameters = OrderedDict()\nparameters[\"x1\"] = pygpc.Beta(pdf_shape=[1, 1], pdf_limits=[-np.pi, np.pi])\nparameters[\"x2\"] = pygpc.Beta(pdf_shape=[1, 1], pdf_limits=[-np.pi, np.pi])\nparameters[\"x3\"] = pygpc.Beta(pdf_shape=[1, 1], pdf_limits=[-np.pi, np.pi])\n\n# define problem\nproblem = pygpc.Problem(model, parameters)"
+        "import pygpc\nimport time\nimport numpy as np\nimport matplotlib.pyplot as plt\nfrom IPython import display\nfrom collections import OrderedDict\n\n# define model\nmodel = pygpc.testfunctions.Ishigami()\n\n# define parameters\nparameters = OrderedDict()\nparameters[\"x1\"] = pygpc.Beta(pdf_shape=[1, 1], pdf_limits=[-np.pi, np.pi])\nparameters[\"x2\"] = pygpc.Beta(pdf_shape=[1, 1], pdf_limits=[-np.pi, np.pi])\nparameters[\"x3\"] = pygpc.Beta(pdf_shape=[1, 1], pdf_limits=[-np.pi, np.pi])\n# test\n# define problem\nproblem = pygpc.Problem(model, parameters)"
       ]
     },
     {
@@ -136,7 +136,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.8.5"
     }
   },
   "nbformat": 4,
